# steam-save-manager

./: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: cloud_commands.rs  game_commands.rs  mod.rs
src-tauri/src/services/: backup_service.rs  cloud_service.rs  config_service.rs  mod.rs  steam_service.rs  watcher_service.rs
src/components/: CloudView.tsx  GameCard.tsx  NavButton.tsx  RestoreModal.tsx  SettingsView.tsx  StatusCard.tsx
src/hooks/: useCloud.ts  useGames.ts
src/store/: useAppStore.ts
src/types/: index.ts
