[package]
name = "steam-save-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "steam_save_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamlocate = "2.0"
chrono = "0.4"
fs_extra = "1.3"
directories = "5.0"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
oauth2 = "4.4"
open = "5.0"
tiny_http = "0.12"
url = "2.5"
regex = "1.12.2"
serde_yaml = "0.9.34"
zip = { version = "2.2", default-features = false, features = ["deflate", "time"] }
dotenv_codegen = "0.15"
