[package]
name = "steam-save-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "steam_save_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
steamlocate = "2.0"
chrono = "0.4"
directories = "5.0"
fs_extra = "1.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
oauth2 = "4.4"
tiny_http = "0.12"
url = "2.4"
dotenv_codegen = "0.15"
zip = "2.2"
open = "5.0"
notify = "6.1.1"
tokio = { version = "1", features = ["full"] } # 'full' garante o timer do Watcher

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
